--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
             <version>3.3</version>
             <type>maven-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.197</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
