добавил классы для 25 задания по Hibernate

--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>local.home.azav.java</groupId>
-    <artifactId>Java-cource</artifactId>
+    <artifactId>firstproject</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>first-project</name>
+    <name>firstproject</name>
     <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--<org.springframework-version>4.2.2.RELEASE</org.springframework-version>-->
         <spring.ver>4.3.17.RELEASE</spring.ver>
+        <hibernate-version>5.0.1.Final</hibernate-version>
     </properties>
 
     <dependencies>
@@ -23,11 +24,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>local.home.azav.java</groupId>
-            <artifactId>Java-cource</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>local.home.azav.java</groupId>-->
+            <!--<artifactId>firstproject</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <!--<dependency>-->
             <!--<groupId>org.springframework</groupId>-->
             <!--<artifactId>spring-context-support</artifactId>-->
@@ -79,6 +80,20 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-logging</artifactId>
             <version>2.0.3.RELEASE</version>
+        </dependency>
+
+        <!-- Hibernate -->
+        <!-- to start need only this -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate-version}</version>
+        </dependency>
+        <!-- for JPA, use hibernate-entitymanager instead of hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate-version}</version>
         </dependency>
     </dependencies>
     <build>
