--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,12 @@
             <artifactId>spring-boot-starter-logging</artifactId>
             <version>2.0.3.RELEASE</version>
         </dependency>
-
+        spring-orm
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.ver}</version>
+        </dependency>
         <!-- Hibernate -->
         <!-- to start need only this -->
         <dependency>
