--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>2.3</version>
+            </plugin>
         </plugins>
     </build>
 </project>
